Data send to third step in MultiStepForm & Fixed the layout issue in packages-builder

--- a/src/components/outline-button.css
+++ b/src/components/outline-button.css
@@ -20,4 +20,8 @@
   background-color: var(--dl-color-gray-black);
 }
 
+.outline-button-x-margin{
+  margin: 0 5px;
+}
+
 
