--- a/src/views/packages-builder.css
+++ b/src/views/packages-builder.css
@@ -1,7 +1,7 @@
 .packages-builder-container {
   width: 100%;
   display: flex;
-  overflow: auto;
+  overflow: hidden;
   min-height: 100vh;
   align-items: center;
   flex-direction: column;
